--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -59,7 +59,7 @@ androidx-compose-material = { group = "androidx.compose.material3", name = "mate
 androidx-compose-material-window = { group = "androidx.compose.material3", name = "material3-window-size-class-android", version.ref = "materialCompose" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigation" }
-app-update-ktx = { module = "com.google.android.play:app-update", version.ref = "appUpdate" }
+app-update = { module = "com.google.android.play:app-update-ktx", version.ref = "appUpdate" }
 composeDestinations = { group = "io.github.raamcosta.compose-destinations", name = "animations-core", version.ref = "composeDestination" }
 composeDestinations-ksp = { group = "io.github.raamcosta.compose-destinations", name = "ksp", version.ref = "composeDestination" }
 javax-inject = { module = "javax.inject:javax.inject", version.ref = "javaxInject" }
