--- a/gradle/.editorconfig
+++ b/gradle/.editorconfig
@@ -4,3 +4,5 @@ root = true
 insert_final_newline = true
 ij_kotlin_allow_trailing_comma = true
 ij_kotlin_allow_trailing_comma_on_call_site = true
+disabled_rules = import-ordering
+ktlint_no-wildcard-imports = disabled
