♻️ :: 아이콘 및 색상 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,12 +45,15 @@
             </intent-filter>
         </service>
         <meta-data
-            android:name="om.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ic_logo_image"/>
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_notification"/>
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/default_notification_channel_id" />
-        
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/primary" />
+
         <receiver
             android:name="team.aliens.dms.android.core.widget.meal.MealWidgetReceiver"
             android:label="@string/today_meal"
